--- a/quiz.html
+++ b/quiz.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quizard-Game</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Quizard - Quiz Game</title>
     <link rel="stylesheet" href="quiz.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <div id="loader"></div>
+
       <div id="quiz" class="justify-center flex-column hidden">
         <div id="hud">
-          <div id="hud-item">
+          <div class="hud-item">
             <p id="progressText" class="hud-prefix">Question</p>
             <div id="progressBar">
               <div id="progressBarFull"></div>
@@ -26,21 +26,21 @@
         </div>
 
         <h2 id="question"></h2>
-        <div class="choice-container">
+        <div class="choice-container" data-choice="1">
           <p class="choice-prefix">A</p>
-          <p class="choice-text" data-number="1"></p>
+          <p class="choice-text"></p>
         </div>
-        <div class="choice-container">
+        <div class="choice-container" data-choice="2">
           <p class="choice-prefix">B</p>
-          <p class="choice-text" data-number="2"></p>
+          <p class="choice-text"></p>
         </div>
-        <div class="choice-container">
+        <div class="choice-container" data-choice="3">
           <p class="choice-prefix">C</p>
-          <p class="choice-text" data-number="3"></p>
+          <p class="choice-text"></p>
         </div>
-        <div class="choice-container">
+        <div class="choice-container" data-choice="4">
           <p class="choice-prefix">D</p>
-          <p class="choice-text" data-number="4"></p>
+          <p class="choice-text"></p>
         </div>
       </div>
     </div>
