Organize project structure: move quiz and leaderboard files into dedicated folders

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
       <div id="home" class="flex-center flex-column">
         <h1>Quizard Challenge</h1>
-        <a class="btn" href="/quiz.html">Take Quiz</a>
-        <a class="btn" href="/topWizards.html">Top Wizards</a>
+        <a class="btn" href="/quiz/quiz.html">Take Quiz</a>
+        <a class="btn" href="/leaderboard/topWizards.html">Top Wizards</a>
       </div>
     </div>
   </body>
