--- a/quiz/end.html
+++ b/quiz/end.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Congrats!</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="container">
@@ -28,7 +28,7 @@
             Save
           </button>
         </form>
-        <a class="btn" href="/quiz.html">Play Again</a>
+        <a class="btn" href="/quiz/quiz.html">Play Again</a>
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
