--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quizard - Quiz Game</title>
     <link rel="stylesheet" href="quiz.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <div class="container">
