--- a/leaderboard/topWizards.html
+++ b/leaderboard/topWizards.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Top Wizards</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="/quizard/style.css" />
     <link rel="stylesheet" href="topWizards.css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
       <div id="highScores" class="flex-center flex-column">
         <h1 id="finalScore">Top Wizards</h1>
         <ul id="topWizardsList"></ul>
-        <a class="btn" href="/">Go Home</a>
+        <a class="btn" href="/quizard/index.html">Go Home</a>
       </div>
     </div>
     <script src="topWizards.js"></script>
